<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_implementado">No implementado aún</string>
    <!--Inicio sesion y registro-->
    <string name="app_name">App de Fran</string>
    <string name="inicio_sesion">Inicio de sesión</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="no_registrado">¿No registrad@?</string>
    <string name="recordar">Recordar</string>
    <string name="registro">Registro</string>
    <string name="registrarme">Registrarme</string>
    <string name="ya_registrado">¿Ya registrad@?</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="ejemplo_nombre_usuario">Velocirraptor06</string>
    <string name="ejemplo_email">miEmail22@gmail.com</string>
    <string name="ejemplo_contrasena">****</string>
    <string name="preferencias">Preferencias</string>
    <string name="bienvenida">Bienvenid@</string>
    <string name="idioma">idioma</string>
    <string name="app_ingles">Esta app está en español</string>
    <string name="guardar_email">Guardar email</string>
    <string name="recuperar_email">Recuperar email</string>
    <string name="guardado">Guardado</string>
    <string name="recuperado">Recuperado</string>
    <string name="alerta">Alerta</string>
    <string name="comprar">Comprar</string>
    <string name="rechazar">Rechazar</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="credenciales_erroneas">Credenciales erroneas</string>
    <string name="cerrar_sesion">Cerrar sesion</string>

    <string name="fecha_nacimiento">Fecha nacimiento</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="minimo_seis_caracteres">Minimo 6 caracteres</string>
    <string name="edad_minima_requerida">Debes tener al menos 12 años</string>


    <!--Pantalla principal-->
    <string name="perfil">Perfil</string>
    <string name="amigos">Amigos</string>
    <string name="ajustes">Ajustes</string>
    <string name="desafios">Desafios</string>
    <string name="social">Social</string>
    <string name="recompensas">Recompensas</string>

    <!--Fragment Perfil-->
    <string name="cambiar_valores">Cambiar</string>
    <string name="peticion_enviada">Email enviado</string>

    <!--Acciones-->
    <string name="aplicar">Aplicar</string>
    <string name="cerrar">Cerrar</string>
    <string name="cargando_elementos">Cargando elementos...</string>
    <string name="completa_campos">Completa todos los campos</string>
    <string name="algo_ha_ido_mal">Algo ha ido mal</string>

    <!--Errores-->
    <string name="error_contrasena">Mínimo 6 caracteres</string>
    <string name="error_campo_no_valido">Campo no válido</string>

    <!--Permisos-->
    <string name="necesitas_conceder_permiso">Debes conceder el permiso para poder usar esta función</string>
    <string name="no_seleccionaste_nada">No seleccionaste nada</string>
</resources>